# internal/domain/entity/settings.go
@@ -2,6 +2,5 @@ package entity
 
 type Settings struct {
 	StorageMode    string
-	AnalyticsOptIn bool
 	ReportTimezone string
 }
